platform-engineering/Lens-IDE/manifests/adminer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: adminer-app
  name: adminer-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adminer-app
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: adminer-app
    spec:
      containers:
        - env:
            - name: ADMINER_DEFAULT_SERVER
              value: mysqldb
          image: adminer:latest
          name: adminer
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
status: {}
