platform-engineering/Lens-IDE/manifests/adminer-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    name: adminer
  name: adminer
spec:
  ports:
    - name: "8000"
      port: 8000
      targetPort: 8080
  selector:
    app: adminer-app
status:
  loadBalancer: {}
