platform-engineering/Lens-IDE/manifests/mysqldb-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  creationTimestamp: null
  labels:
    name: mysqldb-service
  name: mysqldb
spec:
  ports:
    - name: "3306"
      port: 3306
      targetPort: 3306
  selector:
    app: mysql
status:
  loadBalancer: {}
