platform-engineering/Lens-IDE/manifests/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    name: nginx
  name: nginx
spec:
  type: NodePort
  ports:
    - name: "80"
      port: 80
      targetPort: 80
      nodePort: 30080
  selector:
    app: nginx-app
# status:
#   loadBalancer: {}
