platform-engineering/Lens-IDE/manifests/nodeapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: nodeapp
  name: nodeapp
spec:
  ports:
    - name: "3456"
      port: 3456
      targetPort: 3456
  selector:
    app: node-app
status:
  loadBalancer: {}
